objects/Bureau_Candidate__c.object
<CustomObject>
    <description>Managed Services module</description>
    <fields>
        <fullName>BCC__c</fullName>
        <label>BCC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bio_Data__c</fullName>
        <label>Bio Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managed Services Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Managed Services Candidates</relationshipLabel>
        <relationshipName>Bureau_Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <label>Business Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Candidate_Personal_Id__c</fullName>
        <label>Candidate Personal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Tag__c</fullName>
        <description>This field is created to store Candidate related information on WRF.</description>
        <label>Candidate Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Unique_Id__c</fullName>
        <label>Candidate Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Candidate_name_new__c</fullName>
        <label>Candidate name new</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_not_email_login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidate not email login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field is used to capture Rater Type or Category of Candidate. Applicable only for MFS</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Ratings__c</fullName>
        <description>This field represents the number of the Client ratings for this Participant.</description>
        <inlineHelpText>Number of Internal/External Clients who rating this Participant</inlineHelpText>
        <label>Client Ratings</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Internal Client, External Client, Client</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antartica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaidjan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom001__c</fullName>
        <label>Custom001</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom1__c</fullName>
        <label>Custom1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_11111111__c</fullName>
        <label>Custom 11111111</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_9999999__c</fullName>
        <label>Custom 9999999</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Date_001__c</fullName>
        <label>Custom Date 001</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Date_1__c</fullName>
        <label>Custom Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Number_001__c</fullName>
        <label>Custom Number 001</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Number_1__c</fullName>
        <label>Custom Number 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Text_30_03_2026__c</fullName>
        <label>Custom Text 30-03-2026</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ratings__c</fullName>
        <description>This field represents the number of the Customer ratings for this Participant.</description>
        <inlineHelpText>Number of Internal/External Customers who are rating this Participant.</inlineHelpText>
        <label>Customer Ratings</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Internal Customer, External Customer</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_v45__c</fullName>
        <label>Date v45</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeadlineDateV2__c</fullName>
        <label>DeadlineDateV2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_DateV1__c</fullName>
        <label>Deadline DateV1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMAILTEST__c</fullName>
        <label>EMAILTEST</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_as_Username__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture true or false. If true then Email will be copied over Username</description>
        <label>Email as Username?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_5555555555555__c</fullName>
        <label>5555555555555</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &quot; &quot; +  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <label>Functional Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Data_1__c</fullName>
        <label>Generic Data 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Data_2__c</fullName>
        <label>Generic Data 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Data_3__c</fullName>
        <label>Generic Data 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                    <label> Australia</label>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                    <label> NZ</label>
                </value>
                <value>
                    <fullName>UK</fullName>
                    <label> UK</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JCF_Name__c</fullName>
        <label>JCF Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Region__c</fullName>
        <label>Job Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Non China</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Ratings__c</fullName>
        <description>This field calculates the number of Manager Ratings for this Participant.</description>
        <inlineHelpText>Number of Managers/Supervisors who are rating this Participant.</inlineHelpText>
        <label>Manager Ratings</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Manager, Supervisor</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NOTEST__c</fullName>
        <label>NOTEST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_02__c</fullName>
        <label>New 02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Product_Assessment__c</fullName>
        <description>This field is used to capture the count of Products &amp; Assessments for a Candidate</description>
        <formula>IF(
					 OR(
										CONTAINS(Category__c, &apos;Self&apos;),
										Category__c == null
								),
					 IF(
								CONTAINS((Product_Assessment__c), &apos;,&apos;),
								LEN(Product_Assessment__c) - LEN( SUBSTITUTE(Product_Assessment__c, &apos;,&apos;, &apos;&apos;)) + 1,
								IF(
								!CONTAINS((Product_Assessment__c), &apos;,&apos;),
								1,
								0)),
					 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Product/Assessment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Respondents__c</fullName>
        <description>This field is used to capture the count of Ratings other than Self for a Candidate Roll-Up of candidates with &quot;Rater Type&quot; equals &quot;Manager, Colleagues, Others, Direct Reports&quot;</description>
        <label>Number of Respondents</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Manager, Colleagues, Others, Direct Reports</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_participants__c</fullName>
        <description>This field is used to capture the count of Self Ratings for a Candidate Roll-Up of candidates with &quot;Rater Type&quot; equals &quot;Self&quot;</description>
        <label>Number of participants</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Self</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Bureau_Rating__c.TC_Status__c</field>
            <operation>notEqual</operation>
            <value>Recalled</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Ratings__c</fullName>
        <description>This field represents the number of the other ratings for this Participant.</description>
        <inlineHelpText>Number of other rater types who are rating this Participant.</inlineHelpText>
        <label>Other Ratings</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Stakeholder, Other, Others</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Peer_Ratings__c</fullName>
        <description>This field calculates the number of the Peer ratings for this Participant.</description>
        <inlineHelpText>Number of the Peers/Colleagues who are rating this Participant.</inlineHelpText>
        <label>Peer Ratings</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Peer, Colleague</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PendulaReady__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test field to check pendula webhook</description>
        <label>PendulaReady?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Assessment__c</fullName>
        <description>This field is used to capture Products &amp; Assessments applicable for a candidate</description>
        <label>Product/Assessment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_line_Usage__c</fullName>
        <label>Product line /Usage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QWER1tyu__c</fullName>
        <label>QWER1@#$%^&amp;tyu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rater_Types__c</fullName>
        <formula>IF(Manager_Ratings__c&gt;0, &apos;Manager;&apos;,&apos;&apos;) 
+ IF(Peer_Ratings__c&gt;0, &apos;Peer;&apos;,&apos;&apos;)
+ IF(Subordinate_Ratings__c&gt;0, &apos;Subordinate;&apos;,&apos;&apos;)
+ IF(Customer_Ratings__c&gt;0, &apos;Customer;&apos;,&apos;&apos;)
+ IF(Client_Ratings__c&gt;0, &apos;Client;&apos;,&apos;&apos;)
+ IF(Other_Ratings__c&gt;0, &apos;Other&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rater Types</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratings_Completed__c</fullName>
        <description>This field shows the number of ratings for this participant that have been completed</description>
        <inlineHelpText>Number of ratings for this participant that have been completed</inlineHelpText>
        <label>Ratings Completed</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ratings_In_Progress__c</fullName>
        <description>This field represents the number of ratings for this participant that are In Progress</description>
        <inlineHelpText>Number of ratings for this participant that are In Progress</inlineHelpText>
        <label>Ratings In Progress</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ratings_Not_Started__c</fullName>
        <description>This field represents the number of ratings that have not been started for the participant</description>
        <inlineHelpText>Number of ratings that have not been started for this Participant</inlineHelpText>
        <label>Ratings Not Started</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_Status__c</fullName>
        <description>This field represents the status of the Reports for this Participant</description>
        <inlineHelpText>Specify the status of the Reports for this Participant</inlineHelpText>
        <label>Reports Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unsent</fullName>
                    <default>true</default>
                    <label>Unsent</label>
                </value>
                <value>
                    <fullName>Ready to be Generated</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Partially Sent</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Req_no__c</fullName>
        <label>Req# no.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_yu__c</fullName>
        <label>Request#$ yu!</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respondent_Count__c</fullName>
        <description>This is field is created to store cutom roll of respondants on a Job</description>
        <label>Respondent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Email__c</fullName>
        <label>SFDC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFDC_Name__c</fullName>
        <label>SFDC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Rating__c</fullName>
        <label>Self Rating</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Self</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <description>This field is meant for storing the sequence number of the candidate</description>
        <inlineHelpText>Sequence No of the candidiate</inlineHelpText>
        <label>Sequence No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shortfall_Met__c</fullName>
        <formula>IF(AND(
OR(ISBLANK(Bureau_Job__r.ShortFall_Manager__c),Bureau_Job__r.ShortFall_Manager__c&lt;= Manager_Ratings__c),
OR(ISBLANK(Bureau_Job__r.Shortfall_Peer__c),Bureau_Job__r.Shortfall_Peer__c&lt;= Peer_Ratings__c),
OR(ISBLANK(Bureau_Job__r.Shortfall_Subordinate__c),Bureau_Job__r.Shortfall_Subordinate__c&lt;= Subordinate_Ratings__c),
OR(ISBLANK(Bureau_Job__r.ShortFall_Customer__c),Bureau_Job__r.ShortFall_Customer__c&lt;= Customer_Ratings__c),
OR(ISBLANK(Bureau_Job__r.Shortfall_Client__c),Bureau_Job__r.Shortfall_Client__c&lt;= Client_Ratings__c),
OR(ISBLANK(Bureau_Job__r.ShortFall_Other__c),Bureau_Job__r.ShortFall_Other__c&lt;= Other_Ratings__c)
),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Shortfall Met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Requirements__c</fullName>
        <label>Special Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status2__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>DNA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Total_Ratings__c ==  Ratings_Completed__c ,&quot;Completed&quot;,IF(Ratings_Completed__c&gt;0 ||  Ratings_In_Progress__c&gt;0,&quot;In Progress&quot;, &quot;Not Started&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subordinate_Ratings__c</fullName>
        <description>This field represents the number of the Subordinate ratings for this Participant.</description>
        <inlineHelpText>Number of Direct Reports/Reports/Subordinate who are rating this Participant.</inlineHelpText>
        <label>Subordinate Ratings</label>
        <summaryFilterItems>
            <field>Bureau_Rating__c.Rater_Type__c</field>
            <operation>equals</operation>
            <value>Direct Report, Report, Subordinate</value>
        </summaryFilterItems>
        <summaryForeignKey>Bureau_Rating__c.Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>System_s__c</fullName>
        <description>This field is used to capture System(s) applicable for a candidate</description>
        <label>System(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESTDROP__c</fullName>
        <label>TESTDROP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEXT_TEST__c</fullName>
        <label>TEXT  TEST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talent_Central_ID__c</fullName>
        <label>Talent Central ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_5th__c</fullName>
        <label>Testing #/5th</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This field is created to store Title on Candidate which will captured via WRF</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Ratings__c</fullName>
        <formula>Ratings_Completed__c +  Ratings_In_Progress__c +  Ratings_Not_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Ratings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF( Total_Ratings__c==0,&quot;Respondent&quot;, &quot;Participant&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Link__c</fullName>
        <label>Unique Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username_New__c</fullName>
        <formula>IF(
				ISBLANK(Username__c), 
			IF(NOT(Email_as_Username__c),
			  NULL
			, Email__c)
			,Username__c
)</formula>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>This field is used to capture Username based on Email as Username field</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Request</label>
        <referenceTo>Work_Request__c</referenceTo>
        <relationshipLabel>Managed Services Candidates</relationshipLabel>
        <relationshipName>Managed_Services_Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_of_Birth__c</fullName>
        <label>Year of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isExported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for backend processing while candidate export.</description>
        <label>isExported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test1__c</fullName>
        <label>&amp;&amp;test1#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>#test#@</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>